# KFU

./: README.md  Язык С.docx
IBM-project/: IBM.md  README.md
IBM-project/discipline/: discipline.cpp  discipline.h
IBM-project/main-module/: CMakeLists.txt  main-module.md
IBM-project/main-module/database/: user.sql
IBM-project/main-module/reg/: reg.cpp  reg.h
IBM-project/main-module/test/: test.h
IBM-project/reg/: main.cpp  reg.cpp
IBM-project/test/: test.cpp  try.cpp  try.h
exam/: C++.md
test/test + (additional questions)/: README.md
test/test-pr3/: README.md
test/test_1/: README.md
test/test_2/: README.md
test/test_4/: README.md
test/test_5/: README.md
test/test_6/: README.md
